Update deploy-manifest.json to use Node.js 22.x and change entry point to index.js

--- a/deploy-manifest.json
+++ b/deploy-manifest.json
@@ -39,8 +39,8 @@
   "computeResources": [
     {
       "name": "default",
-      "runtime": "nodejs18.x",
-      "entrypoint": "startServer.mjs"
+      "runtime": "nodejs22.x",
+      "entrypoint": "index.js"
     }
   ]
 }
