Refactor Amplify configuration and update dependencies for Vite integration
- Added static directory creation in amplify.yml for deployment.
- Updated static file copying to use the public directory instead of static.
- Removed build.ts and server.ts files as part of the transition to Vite.
- Updated package.json to include Vite and related dependencies.
- Adjusted deploy-manifest.json cache settings for improved performance.
- Cleaned up tsconfig.json to exclude build.ts and removed app.ts as it is no longer needed.

--- a/amplify.yml
+++ b/amplify.yml
@@ -22,9 +22,9 @@ frontend:
       commands:
         - rm -rf ./.amplify-hosting
         - mkdir -p ./.amplify-hosting/compute
+        - mkdir -p ./.amplify-hosting/static
         - cp -r ./dist ./.amplify-hosting/compute/default
-        - cp -r ./static ./.amplify-hosting/static
-        - cp -r ./static ./.amplify-hosting/compute/default
+        - cp -r ./public ./.amplify-hosting/static
         - cp deploy-manifest.json ./.amplify-hosting/deploy-manifest.json
         - 'echo "{ \"type\": \"module\" }" > ./.amplify-hosting/compute/default/package.json'
   artifacts:
