--- a/deploy-manifest.json
+++ b/deploy-manifest.json
@@ -21,7 +21,7 @@
       "path": "/*.*",
       "target": {
         "kind": "Static",
-        "cacheControl": "public, max-age=2"
+        "cacheControl": "public, max-age=3600, immutable"
       },
       "fallback": {
         "kind": "Compute",
