--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "amplify-hono",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "build": "tsx build.ts",
-    "start": "node dist/index.js",
-    "amplify:dev": "pnpm exec ampx sandbox",
-    "amplify:deploy": "pnpm exec ampx pipeline-deploy --branch main",
-    "amplify:generate": "pnpm exec ampx generate outputs --app-id $(cat .amplify/config.json | jq -r '.appId') --branch main --format json"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.18.2",
-  "devDependencies": {
-    "@aws-amplify/backend": "^1.17.0",
-    "@aws-amplify/backend-cli": "^1.8.0",
-    "@biomejs/biome": "2.3.2",
-    "@types/node": "^22.0.0",
-    "aws-cdk-lib": "2.216.0",
-    "constructs": "^10.4.2",
-    "esbuild": "^0.25.11",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
-  },
-  "dependencies": {
-    "@hono/node-server": "^1.19.6",
-    "aws-amplify": "^6.15.7",
-    "hono": "^4.10.4"
-  }
+    "name": "amplify-hono",
+    "version": "0.1.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "vite --port 3000",
+        "build": "vite build",
+        "start": "node dist/index.js",
+        "amplify:dev": "pnpm exec ampx sandbox",
+        "amplify:deploy": "pnpm exec ampx pipeline-deploy --branch main",
+        "amplify:generate": "pnpm exec ampx generate outputs --app-id $(cat .amplify/config.json | jq -r '.appId') --branch main --format json"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "packageManager": "pnpm@10.18.2",
+    "devDependencies": {
+        "@aws-amplify/backend": "^1.17.0",
+        "@aws-amplify/backend-cli": "^1.8.0",
+        "@biomejs/biome": "2.3.2",
+        "@hono/vite-build": "^1.7.0",
+        "@hono/vite-dev-server": "^0.23.0",
+        "@types/node": "^22.0.0",
+        "aws-cdk-lib": "2.216.0",
+        "constructs": "^10.4.2",
+        "esbuild": "^0.25.11",
+        "tsx": "^4.20.6",
+        "typescript": "^5.9.3",
+        "vite": "^7.1.12"
+    },
+    "dependencies": {
+        "@hono/node-server": "^1.19.6",
+        "aws-amplify": "^6.15.7",
+        "hono": "^4.10.4"
+    }
 }
