Enhance API functionality and update project structure
- Updated amplify.yml to specify the public directory for static files.
- Added new dependencies for Zod validation and AWS Lambda types in package.json.
- Implemented message handling in the API with validation using Zod.
- Removed unused memo.txt file from the public directory.
- Refactored backend.ts to include new data and message functions.
- Updated index.tsx to integrate MessageBoard component for improved UI.

--- a/amplify.yml
+++ b/amplify.yml
@@ -24,7 +24,7 @@ frontend:
         - mkdir -p ./.amplify-hosting/compute
         - mkdir -p ./.amplify-hosting/static
         - cp -r ./dist ./.amplify-hosting/compute/default
-        - cp -r ./public ./.amplify-hosting/static
+        - cp -r ./public ./.amplify-hosting/static/public
         - cp deploy-manifest.json ./.amplify-hosting/deploy-manifest.json
         - 'echo "{ \"type\": \"module\" }" > ./.amplify-hosting/compute/default/package.json'
   artifacts:
