--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@biomejs/biome": "2.3.2",
         "@hono/vite-build": "^1.7.0",
         "@hono/vite-dev-server": "^0.23.0",
+        "@types/aws-lambda": "^8.10.157",
         "@types/node": "^22.0.0",
         "aws-cdk-lib": "2.216.0",
         "constructs": "^10.4.2",
@@ -31,7 +32,9 @@
     },
     "dependencies": {
         "@hono/node-server": "^1.19.6",
+        "@hono/zod-validator": "^0.7.4",
         "aws-amplify": "^6.15.7",
-        "hono": "^4.10.4"
+        "hono": "^4.10.4",
+        "zod": "^4.1.12"
     }
 }
